--- a/TechnicalHWExample/Site1.Master
+++ b/TechnicalHWExample/Site1.Master
@@ -15,6 +15,7 @@
             <div style="display:flex;flex-direction:row;justify-content:space-around;width:25%;">
                 <a href="WebForm1.aspx">Default Page</a>
                 <a href="WebForm2.aspx">Crazy Page</a>
+                <a href="WebForm3.aspx">Not Really Crazy Page</a>
             </div>
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
