--- a/TechnicalHWExample/Site1.Master
+++ b/TechnicalHWExample/Site1.Master
@@ -11,11 +11,11 @@
 <body>
     <form id="form1" runat="server">
         <div>
-            <h1 style="color: blue;">Master Page</h1>
+            <h1 style="color: blue;">Pet Meds</h1>
             <div style="display:flex;flex-direction:row;justify-content:space-around;width:25%;">
-                <a href="WebForm1.aspx">Default Page</a>
-                <a href="WebForm2.aspx">Crazy Page</a>
-                <a href="WebForm3.aspx">Not Really Crazy Page</a>
+                <a href="Vet.aspx">Veterinarian</a>
+                <a href="CustomerService.aspx">Customer Service</a>
+                <a href="Dispensing.aspx">Dispensing</a>
             </div>
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
