--- a/TechnicalHWExample/Site1.Master
+++ b/TechnicalHWExample/Site1.Master
@@ -14,11 +14,11 @@
         <div class="text-center mw-50">
             <h1 style="color: blue;"></h1>
             <div style="display:flex;flex-direction:row;justify-content:space-around;width:50%;">
-                    <img class="mb-4" src="Pet Meds Logo.png" alt="" width="75" height="75">
-                <a href="Vet.aspx">Veterinarian</a>
-                <a href="CustomerService.aspx">Customer Service</a>
-                <a href="Dispensing.aspx">Dispensing</a>
-                <a href="messages.aspx">Messages</a>
+                <img class="mb-4" src="Pet Meds Logo.png" alt="" width="75" height="75">
+                <a style="color: black;" href="Vet.aspx">Veterinarian</a>
+                <a style="color: black;" href="CustomerService.aspx">Customer Service</a>
+                <a style="color: black;" href="Dispensing.aspx">Dispensing</a>
+                <a style="color: black;" href="messages.aspx">Messages</a>
             </div>
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
